# bert-embeddings

./: .gitignore  README.md  flake.nix  job.sh  pyproject.toml  requirements.txt
app/: __init__.py  download_nltk_data.py  embed.py  preprocess.py  sentiment.py  sentiment_analysis.py
data/: comments_with_embeddings.csv  embeddings.csv  sentiment.csv
