[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
textblob = "^0.18.0.post0"
torch = "^2.2.2"
pandas = "^2.2.1"
transformers = "^4.39.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
