[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Ethan Thoma <ethoma@student.ubc.ca>"]
license = "MIT"
readme = "README.md"

[tool.poetry.scripts]
app = "app:main"

[tool.poetry.dependencies]
python = "3.11"
textblob = "^0.18.0.post0"
torch = "^2.2.2"
pandas = "^2.2.1"
transformers = "^4.39.3"
maturin = "^1.5.1"
setuptools-rust = "^1.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
